--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ img {
   vertical-align: baseline;
   background:     transparent;
 }
+img.max {
+  max-width:  100%;
+  max-height: 100%;
+}
 a {
   font-style:      inherit;
   font-weight:     inherit;
