layout.tex.erb: {thinkit,itleaders}-books を -local.sty に内包

--- a/layouts/layout.tex.erb
+++ b/layouts/layout.tex.erb
@@ -1,15 +1,8 @@
 % -*- coding: utf-8 -*-
-\documentclass[%
+\documentclass[dvipdfmx,%
 <%= documentclassoption %>
-]{thinkit-books}
-\usepackage[dvipdfmx]{graphicx}
-\usepackage[dvipdfmx]{xcolor}[2007/01/21 v2.11]
-\usepackage[dvipdfmx]{colortbl}[2012/02/13 v1.0a]%requires array
-\usepackage{tabularx}[2014/10/28 v2.10]
-\usepackage{amsmath}[2013/01/14 v2.14]
-\usepackage{thinkit-books-local}
-
-% \includeonly{5484_Drupal}
+]{<%= documentclass %>}
+\usepackage{<%= documentclass %>-local}
 
 \bookcoverimage{<%= values["coverimage"] %>}
 \booktitle{<%= values["booktitle"] %>}
@@ -24,7 +17,10 @@
 % \makebooktitle
 <% end %><% end %>
 <% if values["pre_str"] %><%= values["pre_str"] %><% end %>
+<% if values["toc"] %>
+\setcounter{tocdepth}{<%= values["toclevel"] %>}
 \begin{TOC}\tableofcontents\end{TOC}
+<% end %>
 
 \mainmatter
 <%= values["chap_str"] %>
