--- a/layouts/layout.tex.erb
+++ b/layouts/layout.tex.erb
@@ -31,6 +31,9 @@
 
 <%- if @input_files["POSTDEF"] -%>
 \backmatter
+<%- if @config["pdfmaker"]["makeindex"] -%>
+\printindex
+<%- end -%>
 <%= @input_files["POSTDEF"] %>
 <% end %>
 \end{document}
